--- a/dest/css/popup.css
+++ b/dest/css/popup.css
@@ -54,7 +54,7 @@ body {
   display: inline-block;
   padding: 0.5em 1em;
   text-decoration: none;
-  background: #668ad8;/*ボタン色*/ color: #FFF;
+  background: #55acee;/*ボタン色*/ color: #FFF;
   border-bottom: solid 4px #627295;
   border-radius: 3px;
 }
